#70 adding api tags
