# public/docs/swagger.json
@@ -1,32 +1,17 @@
-// GENERATED BY THE COMMAND ABOVE; DO NOT EDIT
-// This file was generated by swaggo/swag
-
-package docs
-
-import (
-	"bytes"
-	"encoding/json"
-	"strings"
-
-	"github.com/alecthomas/template"
-	"github.com/swaggo/swag"
-)
-
-var doc = `{
-    "schemes": {{ marshal .Schemes }},
+{
     "swagger": "2.0",
     "info": {
-        "description": "{{.Description}}",
-        "title": "{{.Title}}",
+        "description": "Quorum Key Manager API server documentation.",
+        "title": "Quorum Key Manager API",
         "contact": {},
         "license": {
             "name": "Business Source License 1.1",
             "url": "https://mariadb.com/bsl11/"
         },
-        "version": "{{.Version}}"
+        "version": "0.1"
     },
-    "host": "{{.Host}}",
-    "basePath": "{{.BasePath}}",
+    "host": "https://consensysquorum.github.io/quorum-key-manager",
+    "basePath": "/",
     "paths": {
         "/stores/{storeName}/eth1": {
             "get": {
@@ -36,6 +21,9 @@ var doc = `{
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Ethereum account"
                 ],
                 "summary": "List ethereum accounts",
                 "parameters": [
@@ -69,6 +57,9 @@ var doc = `{
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Ethereum account"
                 ],
                 "summary": "Create ethereum account",
                 "parameters": [
@@ -107,6 +98,9 @@ var doc = `{
                 ],
                 "produces": [
                     "text/plain"
+                ],
+                "tags": [
+                    "Ethereum"
                 ],
                 "summary": "EC Recover",
                 "parameters": [
@@ -153,6 +147,9 @@ var doc = `{
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Ethereum account"
+                ],
                 "summary": "Import ethereum account",
                 "parameters": [
                     {
@@ -184,9 +181,63 @@ var doc = `{
         },
         "/stores/{storeName}/eth1/verify-signature": {
             "post": {
+                "description": "Verify signature of an ethereum signing",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Ethereum"
+                ],
+                "summary": "Verify signature",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Selected StoreID",
+                        "name": "storeName",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Ethereum address",
+                        "name": "address",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Ethereum signature verify request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.VerifyEth1SignatureRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Verification confirmed",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "422": {
+                        "description": "Invalid verification",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/stores/{storeName}/eth1/verify-typed-data-signature": {
+            "post": {
                 "description": "Verify signature of an ethereum type data signing",
                 "consumes": [
                     "application/json"
+                ],
+                "tags": [
+                    "Ethereum"
                 ],
                 "summary": "Verify typed data signature",
                 "parameters": [
@@ -239,6 +290,9 @@ var doc = `{
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Ethereum account"
+                ],
                 "summary": "Get ethereum account",
                 "parameters": [
                     {
@@ -269,6 +323,9 @@ var doc = `{
                 "description": "Soft delete ethereum account, can be recovered",
                 "consumes": [
                     "application/json"
+                ],
+                "tags": [
+                    "Ethereum account"
                 ],
                 "summary": "Delete ethereum account",
                 "parameters": [
@@ -303,6 +360,9 @@ var doc = `{
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Ethereum account"
                 ],
                 "summary": "Update ethereum account",
                 "parameters": [
@@ -346,6 +406,9 @@ var doc = `{
                 "consumes": [
                     "application/json"
                 ],
+                "tags": [
+                    "Ethereum account"
+                ],
                 "summary": "Destroy ethereum account",
                 "parameters": [
                     {
@@ -378,6 +441,9 @@ var doc = `{
                 "description": "Recover a soft-deleted ethereum account",
                 "consumes": [
                     "application/json"
+                ],
+                "tags": [
+                    "Ethereum account"
                 ],
                 "summary": "Restore ethereum account",
                 "parameters": [
@@ -414,6 +480,9 @@ var doc = `{
                 ],
                 "produces": [
                     "text/plain"
+                ],
+                "tags": [
+                    "Ethereum account"
                 ],
                 "summary": "Sign payload with ethereum account",
                 "parameters": [
@@ -460,6 +529,9 @@ var doc = `{
                 "produces": [
                     "text/plain"
                 ],
+                "tags": [
+                    "Ethereum account"
+                ],
                 "summary": "Sign EEA transaction",
                 "parameters": [
                     {
@@ -505,6 +577,9 @@ var doc = `{
                 "produces": [
                     "text/plain"
                 ],
+                "tags": [
+                    "Ethereum account"
+                ],
                 "summary": "Sign Quorum private transaction",
                 "parameters": [
                     {
@@ -549,6 +624,9 @@ var doc = `{
                 ],
                 "produces": [
                     "text/plain"
+                ],
+                "tags": [
+                    "Ethereum account"
                 ],
                 "summary": "Sign ethereum transaction",
                 "parameters": [
@@ -966,15 +1044,6 @@ var doc = `{
         "BasicAuth": {
             "type": "basic"
         },
-        "OAuth2AccessCode": {
-            "type": "oauth2",
-            "flow": "accessCode",
-            "authorizationUrl": "https://example.com/oauth/authorize",
-            "tokenUrl": "https://example.com/oauth/token",
-            "scopes": {
-                "admin": " Grants read and write access to administrative information"
-            }
-        },
         "OAuth2Application": {
             "type": "oauth2",
             "flow": "application",
@@ -983,75 +1052,9 @@ var doc = `{
                 "admin": " Grants read and write access to administrative information",
                 "write": " Grants write access"
             }
-        },
-        "OAuth2Implicit": {
-            "type": "oauth2",
-            "flow": "implicit",
-            "authorizationUrl": "https://example.com/oauth/authorize",
-            "scopes": {
-                "admin": " Grants read and write access to administrative information",
-                "write": " Grants write access"
-            }
-        },
-        "OAuth2Password": {
-            "type": "oauth2",
-            "flow": "password",
-            "tokenUrl": "https://example.com/oauth/token",
-            "scopes": {
-                "admin": " Grants read and write access to administrative information",
-                "read": " Grants read access",
-                "write": " Grants write access"
-            }
         }
     },
     "x-extension-openapi": {
         "example": "value on a json format"
     }
-}`
-
-type swaggerInfo struct {
-	Version     string
-	Host        string
-	BasePath    string
-	Schemes     []string
-	Title       string
-	Description string
-}
-
-// SwaggerInfo holds exported Swagger Info so clients can modify it
-var SwaggerInfo = swaggerInfo{
-	Version:     "0.1",
-	Host:        "localhost:8080",
-	BasePath:    "/",
-	Schemes:     []string{},
-	Title:       "Quorum Key Manager API",
-	Description: "Quorum Key Manager API server documentation.",
-}
-
-type s struct{}
-
-func (s *s) ReadDoc() string {
-	sInfo := SwaggerInfo
-	sInfo.Description = strings.Replace(sInfo.Description, "\n", "\\n", -1)
-
-	t, err := template.New("swagger_info").Funcs(template.FuncMap{
-		"marshal": func(v interface{}) string {
-			a, _ := json.Marshal(v)
-			return string(a)
-		},
-	}).Parse(doc)
-	if err != nil {
-		return doc
-	}
-
-	var tpl bytes.Buffer
-	if err := t.Execute(&tpl, sInfo); err != nil {
-		return doc
-	}
-
-	return tpl.String()
-}
-
-func init() {
-	swag.Register(swag.Name, &s{})
 }
